# goto

./: README.md  example.py  pyproject.toml
goto/: __init__.py
tests/: test_goto.py
