[tool.poetry]
name = "goto"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyright = "^1.1.267"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
